syntax = "proto3";

import "google/protobuf/empty.proto";
package telemetry.services;

import "telemetry/messages/hub_event.proto";
import "telemetry/messages/sensor_event.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.collector";

service CollectorController {

    rpc CollectSensorEvent (telemetry.messages.SensorEventProto) returns (google.protobuf.Empty);

    rpc CollectHubEvent (telemetry.messages.HubEventProto) returns (google.protobuf.Empty);

}






